# httpcv

./: .gitignore  CMakeLists.txt  README.rst  bootstrap.bat  bootstrap_mimetic.bat  bootstrap_opencv.bat  bootstrap_sw.bat  bootstrap_vmime.bat  build-icu.bat  build.bat  build_sw.bat  configure.bat  cpp-jpeg-turbo.hpp  cvtest.cpp  get_waf.py  greenshift.cpp  httpcv.cpp  run.bat  runcv.bat  testbed.cpp  variables.bat  vmime_msvc_mt.diff  wscript
cmake/: FindICU.cmake  FindMimetic.cmake  FindVmime.cmake
web/: index.html
